TEST-12 Feat: 질문, 답변 글 확인 pagination

--- a/templates/login/mycomment.html
+++ b/templates/login/mycomment.html
@@ -12,14 +12,42 @@
                     <th width='600' >제목</th>
                     <th>날짜</th>
                 </tr>
-                {% for comment in d_comments %}
+                {% for comment in page_obj1 %}
                 <tr>
-                    <td class="numbered4" align='center'></td>
+                    <td class="numbered1" align='center'></td>
                     <td style="padding-left: 30px;"><a href="{% url 'domestic:question_detail' comment.question.home_university.pk comment.question.pk %}">{{ comment.question.question_title }}</a></td>
                     <td align="center">{{ comment.question.created_at }}</td>
                 </tr>
                 {% endfor %}
             </table>
+            <div style="text-align:center">
+                <div class="pagination">
+                    <div style="width:35%; margin: 5px;">
+                        {% if page_obj1.has_previous %}
+                        <a class="abutton" href="?page1=1">맨 앞으로</a>
+                        <a class="abutton" href="?page1={{ bpage_obj.previous_page_number }}">이전</a>
+                        {% endif %}
+                    </div>
+                    <div style="width:30%; margin: 5px;">
+                        {% for page1 in page_obj1.paginator.page_range %}
+                            {% if page1 >= page_obj1.number|add:-2 and page1 <= page_obj1.number|add:2 %}
+                                <span class="{% if page1 == page_obj1.number %}current{% endif %}">
+                                    <a href="?page1={{ page1 }}" {% if page1 == page_obj1.number %}style="font-weight: bold;"{%endif%}>{{ page1 }}</a>
+                                    
+                                </span>
+                            {% elif page1 >= page_obj1.number|add:-3 and page1 <= page_obj1.number|add:3 %}
+                                <span>..</span>
+                            {% endif %}
+                        {% endfor %}
+                    </div>
+                    <div style="width:35%; margin: 5px;">
+                        {% if page_obj1.has_next %}
+                            <a class="abutton" href="?page1={{ page_obj1.next_page_number }}">다음</a>
+                            <a class="abutton" href="?page1={{ page_obj1.paginator.num_pages }}">맨 뒤로</a>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
             <hr />
             <h5>해외파견교별</h5>
             <table>
@@ -28,14 +56,42 @@
                     <th width='600' >제목</th>
                     <th>날짜</th>
                 </tr>
-                {% for comment in f_comments %}
+                {% for comment in page_obj2 %}
                 <tr>
-                    <td class="numbered5" align='center'></td>
+                    <td class="numbered2" align='center'></td>
                     <td style="padding-left: 30px;"><a href="{% url 'foreign:question_detail' comment.question.away_university.pk comment.question.pk %}">{{ comment.question.question_title }}</a></td>
                     <td align="center">{{ comment.question.created_at }}</td>
                 </tr>
                 {% endfor %}
             </table>
+            <div style="text-align:center">
+                <div class="pagination">
+                    <div style="width:35%; margin: 5px;">
+                        {% if page_obj2.has_previous %}
+                        <a class="abutton" href="?page=1">맨 앞으로</a>
+                        <a class="abutton" href="?page={{ bpage_obj.previous_page_number }}">이전</a>
+                        {% endif %}
+                    </div>
+                    <div style="width:30%; margin: 5px;">
+                        {% for page2 in page_obj2.paginator.page_range %}
+                            {% if page2 >= page_obj2.number|add:-2 and page2 <= page_obj2.number|add:2 %}
+                                <span class="{% if page2 == page_obj2.number %}current{% endif %}">
+                                    <a href="?page2={{ page2 }}" {% if page2 == page_obj2.number %}style="font-weight: bold;"{%endif%}>{{ page2 }}</a>
+                                    
+                                </span>
+                            {% elif page2 >= page_obj2.number|add:-3 and page2 <= page_obj2.number|add:3 %}
+                                <span>..</span>
+                            {% endif %}
+                        {% endfor %}
+                    </div>
+                    <div style="width:35%; margin: 5px;">
+                        {% if page_obj2.has_next %}
+                            <a class="abutton" href="?page2={{ page_obj2.next_page_number }}">다음</a>
+                            <a class="abutton" href="?page2={{ page_obj2.paginator.num_pages }}">맨 뒤로</a>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
             <hr />
             <h5>파견국가별</h5>
             <table>
@@ -44,14 +100,42 @@
                     <th width='600' >제목</th>
                     <th>날짜</th>
                 </tr>
-                {% for comment in c_comments %}
+                {% for comment in page_obj3 %}
                 <tr>
-                    <td class="numbered6" align='center'></td>
+                    <td class="numbered3" align='center'></td>
                     <td style="padding-left: 30px;"><a href="{% url 'country:question_detail' comment.question.country.pk comment.question.pk %}">{{ comment.question.question_title }}</a></td>
                     <td align="center">{{ comment.question.created_at }}</td>
                 </tr>
                 {% endfor %}
             </table>
+            <div style="text-align:center">
+                <div class="pagination">
+                    <div style="width:35%; margin: 5px;">
+                        {% if page_obj3.has_previous %}
+                        <a class="abutton" href="?page3=1">맨 앞으로</a>
+                        <a class="abutton" href="?page3={{ bpage_obj3.previous_page_number }}">이전</a>
+                        {% endif %}
+                    </div>
+                    <div style="width:30%; margin: 5px;">
+                        {% for page3 in page_obj3.paginator.page_range %}
+                            {% if page3 >= page_obj3.number|add:-2 and page3 <= page_obj3.number|add:2 %}
+                                <span class="{% if page3 == page_obj3.number %}current{% endif %}">
+                                    <a href="?page3={{ page3 }}" {% if page3 == page_obj3.number %}style="font-weight: bold;"{%endif%}>{{ page3 }}</a>
+                                    
+                                </span>
+                            {% elif page3 >= page_obj3.number|add:-3 and page3 <= page_obj3.number|add:3 %}
+                                <span>..</span>
+                            {% endif %}
+                        {% endfor %}
+                    </div>
+                    <div style="width:35%; margin: 5px;">
+                        {% if page_obj3.has_next %}
+                            <a class="abutton" href="?page3={{ page_obj3.next_page_number }}">다음</a>
+                            <a class="abutton" href="?page3={{ page_obj3.paginator.num_pages }}">맨 뒤로</a>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
     
@@ -59,34 +143,43 @@
 
 {% block extra %}
 <script>
-    function numbering4(startnum){
-        var init4 = startnum;
-        var td_list4 = document.querySelectorAll(`.numbered4`);
-        for(var l=0; l<td_list4.length; l++){
-            init4++;
-            td_list4[l].innerHTML= `${init4}`;
+    function numbering(startnum){
+        var init1 = startnum;
+        var td_list1 = document.querySelectorAll(`.numbered1`);
+        for(var i=0; i<td_list1.length; i++){
+            if (i==0){
+                init1=init1+({{ page_obj1.number }}-1)*15;
+            }
+            init1++;
+            td_list1[i].innerHTML= `${init1}`;
         }
     }
-    numbering4(0);
+    numbering(0);
 
-    function numbering5(startnum){
-        var init5 = startnum;
-        var td_list5 = document.querySelectorAll(`.numbered5`);
-        for(var m=0; m<td_list5.length; m++){
-            init5++;
-            td_list5[m].innerHTML= `${init5}`;
+    function numbering2(startnum){
+        var init2 = startnum;
+        var td_list2 = document.querySelectorAll(`.numbered2`);
+        for(var j=0; j<td_list2.length; j++){
+            if (j==0){
+                init2=init2+({{ page_obj2.number }}-1)*15;
+            }
+            init2++;
+            td_list2[j].innerHTML= `${init2}`;
         }
     }
-    numbering5(0);
+    numbering2(0);
 
-    function numbering6(startnum){
-        var init6 = startnum;
-        var td_list6 = document.querySelectorAll(`.numbered6`);
-        for(var n=0; n<td_list6.length; n++){
-            init6++;
-            td_list6[n].innerHTML= `${init6}`;
+    function numbering3(startnum){
+        var init3 = startnum;
+        var td_list3 = document.querySelectorAll(`.numbered3`);
+        for(var k=0; k<td_list3.length; k++){
+            if (k==0){
+                init3=init3+({{ page_obj3.number }}-1)*15;
+            }
+            init3++;
+            td_list3[k].innerHTML= `${init3}`;
         }
     }
-    numbering6(0);
+    numbering3(0);
 </script>
 {% endblock %}
