TEST-78 Feat: main-section1 css

--- a/templates/login/main.html
+++ b/templates/login/main.html
@@ -1,6 +1,18 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<section class="main__img d-flex flex-column justify-content-center">
+    <div class="text main-title">
+        UNI<br>
+        CONNECT
+    </div>
+    <p class="text main-con">
+        인생의 한 번 뿐인 교환학생,<br>
+        하지만 준비 없이는 마음이 불안하고 몸이 고생하죠.<br>
+        유니 커넥트에서 필요한 정보들을 찾아보고 경험을 공유하세요.
+    </p>
+    <p class="text main-sub">“학교를 잇다, 하나로 잇다”</p>
+</section>
 <div class="d-flex flex-column align-items-center text-center mt-5">
     <div>
         <h1>🌏UNI CONNECT</h1>
