--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400;500;700&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Righteous&display=swap");
 
 @import "reset.css";
 @import "variables.css";
@@ -7,8 +8,10 @@
 @import "components/header.css";
 
 /* Pages */
+@import "pages/main.css";
 
 body {
   font-family: "Noto Sans KR", sans-serif;
   background-color: var(--bg);
+  color: var(--d-gray);
 }
