--- a/templates/base.html
+++ b/templates/base.html
@@ -14,7 +14,7 @@
     {% endblock %}
 </head>
 <body>
-    <header>
+    <header class="d-flex align-items-center flex-column">
         <div class="header d-flex justify-content-between align-items-center">
             <a href="{% url 'login:user_main' %}" class="header_logo"><img src="../static/css/img/header_logo.png" alt="header_logo"></a>
             <div class="d-flex">
