TEST-78 Fix: color code fix

--- a/templates/login/main.html
+++ b/templates/login/main.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<section class="main__img d-flex flex-column justify-content-center">
+<main class="main__img d-flex flex-column justify-content-center">
     <div class="text main-title">
         UNI<br>
         CONNECT
@@ -12,15 +12,15 @@
         유니 커넥트에서 필요한 정보들을 찾아보고 경험을 공유하세요.
     </p>
     <p class="text main-sub">“학교를 잇다, 하나로 잇다”</p>
-</section>
-<div class="d-flex flex-column align-items-center text-center mt-5">
-    <div>
-        <h1>🌏UNI CONNECT</h1>
-        <h4 class="mt-4">교환학생 정보교환 플랫폼</h4>
-        <p class="mt-3 mb-1">인생의 한 번 뿐인 교환학생,</p>
-        <p class="mb-1">하지만 준비 없이는 불안하고 몸이 고생하죠.</p> 
-        <p>유니 커넥트에서 필요한 정보들을 찾아보고 경험을 공유하세요!</p>
-        
+</main>
+
+<section class="main__intro">
+    <div class="quotation-mark">"</div>
+    <div >
+        세상 제일 멋지고 귀여운<br>
+        유니커넥트 팀원들을 소개합니다~!
     </div>
-</div>
+    <div class="quotation-mark">"</div>
+</section>
+
 {% endblock %}
