--- a/templates/foreign/univ_list.html
+++ b/templates/foreign/univ_list.html
@@ -1,11 +1,14 @@
 {%extends "base.html"%}
 {%block content%}
 <div class="d-flex flex-column justify-content-center" style="margin-left: 30px;">
-    <div class=" mt-5" >
+    <div class="foreign_list mt-5" >
+    
     {% for key, val in univ_dict.items %}
-    <a href="#{{ key }}">{{ key }}</a>
+    <a href="#{{ key }}" class="alpha">{{ key }}</a>
     {% endfor %}
-    <button class="btn btn-sm btn-border btn-primary mx-5" onclick="location.href='{% url "foreign:univ_search" %}'">학교 추가</button>
+
+
+    <button class="btn btn-sm btn-border btn-primary mx-5 addForeign" onclick="location.href='{% url "foreign:univ_search" %}'">학교 추가</button>
     {% for key, val in univ_dict.items %}
         <ul>
             <h3 id="{{ key }}">{{ key }}</h3>
@@ -21,4 +24,32 @@
     {% endfor %}
     </div>
 </div>
+
+<script>
+function list(startAlpha){
+    var parent = document.querySelector('.foreign_list')
+    var foreign_list = document.querySelectorAll(`.foreign_list .alpha`);
+    var end = document.querySelector('.addForeign')
+    var startnum =startAlpha.charCodeAt(0);
+    
+    for(i=0;i<foreign_list.length;i++){
+        for(j=startnum ; j<foreign_list[i].innerHTML.charCodeAt(0) ; j++){
+            var newSpan = document.createElement('span');
+            newSpan.textContent = String.fromCharCode(j);
+            parent.insertBefore(newSpan, foreign_list[i]);
+        }
+        startAlpha = foreign_list[i].innerHTML.charCodeAt(0)+1;
+        startnum =startAlpha
+        
+    }
+    for(i=foreign_list[foreign_list.length-1].innerHTML.charCodeAt(0)+1;i<'Z'.charCodeAt(0)+1;i++){
+        var newSpan = document.createElement('span');
+        newSpan.textContent = String.fromCharCode(i);
+        parent.insertBefore(newSpan, end);
+    }
+    
+    
+}
+list('A');
+</script>
 {%endblock%}
