--- a/templates/login/main.html
+++ b/templates/login/main.html
@@ -14,9 +14,9 @@
     <p class="text main-sub">“학교를 잇다, 하나로 잇다”</p>
 </main>
 
-<section class="main__intro">
+<section class="main__intro d-flex align-items-center justify-content-center">
     <div class="quotation-mark">"</div>
-    <div >
+    <div class="text">
         세상 제일 멋지고 귀여운<br>
         유니커넥트 팀원들을 소개합니다~!
     </div>
