--- a/templates/login/reset_password.html
+++ b/templates/login/reset_password.html
@@ -1,24 +1,26 @@
 {% extends 'base.html' %}
 
+{% block style %} 
+{% load static %}
+<link rel="stylesheet" type="text/css" href="{% static 'css/pages/login.css' %}"/>
+{% endblock %}
+
+
 {% block content %}
-<div class="container ml-5 mt-4">
+<div class="d-flex flex-column align-items-center container">
     <h3>비밀번호 재설정</h3>
+    <br />
     <hr />
-    <div class="d-flex justify-content-center">
-        <form method="POST">
-            {% csrf_token %}
-                아이디:
-                <br />
-                <input name="username" type="text" required/>
-                <br />
-                이메일:
-                <br />
-                <input name="email" type="email" required/><br />
-                <small>등록하신 이메일로 임시 비밀번호가 발송됩니다.</small>
-                <br />
-                <input class="btn btn-primary mt-2" type="submit" value="비밀번호 찾기" />
-        </form>
-    </div>
+    <form method="POST">
+        {% csrf_token %}
+            <input class="login-input" name="username" type="text" placeholder="아이디" required/>
+            <br />
+            <input class="login-input" name="email" type="email" placeholder="이메일" required/><br />
+            <div class="reset-password">
+                <small class="reset-button">등록하신 이메일로 임시 비밀번호가 발송됩니다.</small>
+            </div>
+            <input class="login-btn blue-button" type="submit" value="비밀번호 찾기" />
+    </form>
 </div>
 {% endblock %}
 
