--- a/templates/login/signup.html
+++ b/templates/login/signup.html
@@ -3,44 +3,33 @@
 {% block content %}
 <div class="container ml-5 mt-4 w-75">
     <h3>회원가입</h3>
-    <p>회원가입 페이지입니다.</p>
+    <br />
     <hr />
     <form method="POST" action="{% url 'login:signup' %}">
         {% csrf_token %}
         <p>
-            <label for="id_username">아이디:</label>
-            <input type="text" name="username" max="30" autofocus required id="id_username" autocomplete="off"/>
-            <span class="helptext">문자, 숫자 혹은 특수문자(@/./+/-/_)를 포함한 30자 이하.</span>
+            <label for="id_username">아이디</label><br />
+            <input class="login-input" type="text" name="username" max="30" autofocus required id="id_username" autocomplete="off" style="margin-bottom: 10px;"/><br />
+            <small class="reset-button">문자, 숫자, 특수문자(@/./+/-/_)를 포함한 30자 이하</small>
         </p>
-        <p>
-            <label for="id_nickname">닉네임:</label>
-            <input type="text" name="nickname" maxlength="20" required id="id_nickname" autocomplete="off">
+        <p class="each-input">
+            <label for="id_nickname">닉네임</label><br />
+            <input class="login-input" type="text" name="nickname" maxlength="20" required id="id_nickname" autocomplete="off">
         </p>
-        <p>
-            <label for="id_email">이메일:</label>
-            <input type="email" name="email" maxlength="100" required id="id_email" autocomplete="off"/>
+        <p class="each-input">
+            <label for="id_email">이메일</label><br />
+            <input class="login-input" type="email" name="email" maxlength="100" required id="id_email" autocomplete="off"/>
         </p>
-        <p>
-            <label for="id_password1">비밀번호:</label>
-            <input type="password" name="password1" autocomplete="new-password" required id="id_password1">
+        <p class="each-input">
+            <label for="id_password1">비밀번호</label><br />
+            <input class="login-input" type="password" name="password1" autocomplete="new-password" required id="id_password1" style="margin-bottom: 10px;"><br />
+            <small class="reset-button">문자, 숫자를 조합한 최소 8자 이상</small>
         </p>
-        <ul>
-            <li>
-                <span>생일, 전화번호, 아이디가 포함된 쉬운 비밀번호는 사용하지 마세요.</span> 
-            </li>
-            <li>
-                <span>문자, 숫자를 조합한 최소 8자 이상 작성해주세요.</span> 
-            </li>
-            <li>
-                <span>다른 사이트에서 사용하는 것과 동일한 비밀번호는 사용하지 마세요.</span> 
-            </li>
-        </ul>
-        <p>
-            <label for="id_password2">비밀번호 확인:</label>
-            <input type="password" name="password2" autocomplete="new-password" required id="id_password2">
-            <span class="helptext">비밀번호 확인을 위해 다시 한 번 입력해주세요.</span>
+        <p class="each-input">
+            <label for="id_password2">비밀번호 확인</label><br />
+            <input class="login-input" type="password" name="password2" autocomplete="new-password" required id="id_password2">
         </p>
-        <input class="btn btn-primary" type="submit" value="회원가입" />
+        <input class="blue-button login-btn" type="submit" value="회원가입" style="margin-top: 30px;"/>
     </form>
 </div>
 {% endblock %}
